--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     font-family: Poppins;
 }
 
+body{
+    background-color: #FFF9F1;
+}
+
 .div-header{
     display: flex;
     align-items: center;
@@ -48,9 +52,9 @@
 
 .faixa{
     background-color: #a31849;
-    width: 100%px;
+    width: 100%;
     position: relative;
-    height: 300px;
+    height: 450px;
     padding: 80px;
 }
 
@@ -83,12 +87,12 @@
     font-size: 29px;
     text-align: center;
 }
-.container{
+.ct1{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 50px;
-    
+    margin-bottom: 200px;
 }
 
 .quadrados{
@@ -155,4 +159,11 @@
 #blue img{
     width: 100%;
     /* position: absolute; */
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    margin: 50px;
+    flex-direction: column;
 }
